--- a/webapp/package.json
+++ b/webapp/package.json
@@ -12,6 +12,7 @@
     "@google/generative-ai": "^0.21.0",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.13.1",
